# cloak

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/config/: ide.rs
src/core/: hider.rs  linker.rs  mod.rs  mover.rs
src/utils/: git.rs
tests/: cli_integration.rs
