[package]
name = "cloak"
version = "0.1.0"
edition = "2024"
description = "Config files should work, not be seen. Zero-perception config file organizer."
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
serde_json = "1"
walkdir = "2"
colored = "3"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.180"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winnt"] }
